445CompilerDesign/hw5/testDataA5_o/c-.output
Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 declaration: var_declaration
    5            | fun_declaration

    6 var_declaration: type_specifier var_decl_list ';'

    7 scoped_var_declaration: STATIC type_specifier var_decl_list ';'
    8                       | type_specifier var_decl_list ';'

    9 var_decl_list: var_decl_list ',' var_decl_initialize
   10              | var_decl_initialize

   11 var_decl_initialize: ID
   12                    | ID '[' NUMCONST ']'
   13                    | ID ':' simple_expression
   14                    | ID '[' NUMCONST ']' ':' simple_expression

   15 type_specifier: INT
   16               | BOOL
   17               | CHAR

   18 fun_declaration: type_specifier ID '(' params ')' statement
   19                | ID '(' params ')' statement

   20 params: param_list
   21       | /* empty */

   22 param_list: param_list ';' type_specifier param_id_list
   23           | type_specifier param_id_list

   24 param_id_list: param_id_list ',' param_id
   25              | param_id

   26 param_id: ID
   27         | ID '[' ']'

   28 statement: ifmatched
   29          | ifunmatched

   30 ifmatched: IF '(' simple_expression ')' ifmatched ELSE ifmatched
   31          | WHILE '(' simple_expression ')' ifmatched
   32          | FOREACH '(' mutable IN simple_expression ')' ifmatched
   33          | expression_stmt

   34 ifunmatched: IF '(' simple_expression ')' ifmatched ELSE ifunmatched
   35            | IF '(' simple_expression ')' statement
   36            | WHILE '(' simple_expression ')' ifunmatched
   37            | FOREACH '(' mutable IN simple_expression ')' ifunmatched

   38 expression_stmt: compound_stmt
   39                | RETURN ';'
   40                | RETURN expression ';'
   41                | BREAK ';'
   42                | expression ';'
   43                | ';'

   44 compound_stmt: '{' local_declarations statement_list '}'

   45 local_declarations: local_declarations scoped_var_declaration
   46                   | /* empty */

   47 statement_list: statement_list statement
   48               | /* empty */

   49 expression: mutable '=' expression
   50           | mutable PASSIGN expression
   51           | mutable MASSIGN expression
   52           | mutable INC
   53           | mutable DEC
   54           | simple_expression

   55 simple_expression: simple_expression OR and_expression
   56                  | and_expression

   57 and_expression: and_expression AND unary_rel_expression
   58               | unary_rel_expression

   59 unary_rel_expression: NOT unary_rel_expression
   60                     | rel_expression

   61 rel_expression: sum_expression '<' sum_expression
   62               | sum_expression '>' sum_expression
   63               | sum_expression LEQ sum_expression
   64               | sum_expression GEQ sum_expression
   65               | sum_expression EQ sum_expression
   66               | sum_expression NEQ sum_expression
   67               | sum_expression

   68 sum_expression: sum_expression '+' term
   69               | sum_expression '-' term
   70               | term

   71 term: term mulop unary_expression
   72     | unary_expression

   73 mulop: '*'
   74      | '/'
   75      | '%'

   76 unary_expression: unaryop unary_expression
   77                 | factor

   78 unaryop: '-'
   79        | '*'

   80 factor: immutable
   81       | mutable

   82 mutable: ID
   83        | ID '[' expression ']'

   84 immutable: '(' expression ')'
   85          | call
   86          | NUMCONST
   87          | CHARCONST
   88          | STRINGCONST
   89          | TRUE
   90          | FALSE

   91 call: ID '(' args ')'

   92 args: arg_list
   93     | /* empty */

   94 arg_list: arg_list ',' expression
   95         | expression


Terminals, with rules where they appear

$end (0) 0
'%' (37) 75
'(' (40) 18 19 30 31 32 34 35 36 37 84 91
')' (41) 18 19 30 31 32 34 35 36 37 84 91
'*' (42) 73 79
'+' (43) 68
',' (44) 9 24 94
'-' (45) 69 78
'/' (47) 74
':' (58) 13 14
';' (59) 6 7 8 22 39 40 41 42 43
'<' (60) 61
'=' (61) 49
'>' (62) 62
'[' (91) 12 14 27 83
']' (93) 12 14 27 83
'{' (123) 44
'}' (125) 44
error (256)
PASSIGN (258) 50
MASSIGN (259) 51
INC (260) 52
DEC (261) 53
EQ (262) 65
NEQ (263) 66
LEQ (264) 63
GEQ (265) 64
ID (266) 11 12 13 14 18 19 26 27 82 83 91
CHARCONST (267) 87
NUMCONST (268) 12 14 86
STRINGCONST (269) 88
IF (270) 30 34 35
ELSE (271) 30 34
WHILE (272) 31 36
FOREACH (273) 32 37
IN (274) 32 37
STATIC (275) 7
INT (276) 15
BOOL (277) 16
CHAR (278) 17
TRUE (279) 89
FALSE (280) 90
RETURN (281) 39 40
BREAK (282) 41
AND (283) 57
OR (284) 55
NOT (285) 59


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
declaration_list (50)
    on left: 2 3, on right: 1 2
declaration (51)
    on left: 4 5, on right: 2 3
var_declaration (52)
    on left: 6, on right: 4
scoped_var_declaration (53)
    on left: 7 8, on right: 45
var_decl_list (54)
    on left: 9 10, on right: 6 7 8 9
var_decl_initialize (55)
    on left: 11 12 13 14, on right: 9 10
type_specifier (56)
    on left: 15 16 17, on right: 6 7 8 18 22 23
fun_declaration (57)
    on left: 18 19, on right: 5
params (58)
    on left: 20 21, on right: 18 19
param_list (59)
    on left: 22 23, on right: 20 22
param_id_list (60)
    on left: 24 25, on right: 22 23 24
param_id (61)
    on left: 26 27, on right: 24 25
statement (62)
    on left: 28 29, on right: 18 19 35 47
ifmatched (63)
    on left: 30 31 32 33, on right: 28 30 31 32 34
ifunmatched (64)
    on left: 34 35 36 37, on right: 29 34 36 37
expression_stmt (65)
    on left: 38 39 40 41 42 43, on right: 33
compound_stmt (66)
    on left: 44, on right: 38
local_declarations (67)
    on left: 45 46, on right: 44 45
statement_list (68)
    on left: 47 48, on right: 44 47
expression (69)
    on left: 49 50 51 52 53 54, on right: 40 42 49 50 51 83 84 94 95
simple_expression (70)
    on left: 55 56, on right: 13 14 30 31 32 34 35 36 37 54 55
and_expression (71)
    on left: 57 58, on right: 55 56 57
unary_rel_expression (72)
    on left: 59 60, on right: 57 58 59
rel_expression (73)
    on left: 61 62 63 64 65 66 67, on right: 60
sum_expression (74)
    on left: 68 69 70, on right: 61 62 63 64 65 66 67 68 69
term (75)
    on left: 71 72, on right: 68 69 70 71
mulop (76)
    on left: 73 74 75, on right: 71
unary_expression (77)
    on left: 76 77, on right: 71 72 76
unaryop (78)
    on left: 78 79, on right: 76
factor (79)
    on left: 80 81, on right: 77
mutable (80)
    on left: 82 83, on right: 32 37 49 50 51 52 53 81
immutable (81)
    on left: 84 85 86 87 88 89 90, on right: 80
call (82)
    on left: 91, on right: 85
args (83)
    on left: 92 93, on right: 91
arg_list (84)
    on left: 94 95, on right: 92 94


state 0

    0 $accept: . program $end

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    program           go to state 5
    declaration_list  go to state 6
    declaration       go to state 7
    var_declaration   go to state 8
    type_specifier    go to state 9
    fun_declaration   go to state 10


state 1

   19 fun_declaration: ID . '(' params ')' statement

    '('  shift, and go to state 11


state 2

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


state 3

   16 type_specifier: BOOL .

    $default  reduce using rule 16 (type_specifier)


state 4

   17 type_specifier: CHAR .

    $default  reduce using rule 17 (type_specifier)


state 5

    0 $accept: program . $end

    $end  shift, and go to state 12


state 6

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    ID    shift, and go to state 1
    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration      go to state 13
    var_declaration  go to state 8
    type_specifier   go to state 9
    fun_declaration  go to state 10


state 7

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 8

    4 declaration: var_declaration .

    $default  reduce using rule 4 (declaration)


state 9

    6 var_declaration: type_specifier . var_decl_list ';'
   18 fun_declaration: type_specifier . ID '(' params ')' statement

    ID  shift, and go to state 14

    var_decl_list        go to state 15
    var_decl_initialize  go to state 16


state 10

    5 declaration: fun_declaration .

    $default  reduce using rule 5 (declaration)


state 11

   19 fun_declaration: ID '(' . params ')' statement

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (params)

    type_specifier  go to state 17
    params          go to state 18
    param_list      go to state 19


state 12

    0 $accept: program $end .

    $default  accept


state 13

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 14

   11 var_decl_initialize: ID .
   12                    | ID . '[' NUMCONST ']'
   13                    | ID . ':' simple_expression
   14                    | ID . '[' NUMCONST ']' ':' simple_expression
   18 fun_declaration: type_specifier ID . '(' params ')' statement

    ':'  shift, and go to state 20
    '('  shift, and go to state 21
    '['  shift, and go to state 22

    $default  reduce using rule 11 (var_decl_initialize)


state 15

    6 var_declaration: type_specifier var_decl_list . ';'
    9 var_decl_list: var_decl_list . ',' var_decl_initialize

    ','  shift, and go to state 23
    ';'  shift, and go to state 24


state 16

   10 var_decl_list: var_decl_initialize .

    $default  reduce using rule 10 (var_decl_list)


state 17

   23 param_list: type_specifier . param_id_list

    ID  shift, and go to state 25

    param_id_list  go to state 26
    param_id       go to state 27


state 18

   19 fun_declaration: ID '(' params . ')' statement

    ')'  shift, and go to state 28


state 19

   20 params: param_list .
   22 param_list: param_list . ';' type_specifier param_id_list

    ';'  shift, and go to state 29

    $default  reduce using rule 20 (params)


state 20

   13 var_decl_initialize: ID ':' . simple_expression

    ID           shift, and go to state 30
    CHARCONST    shift, and go to state 31
    NUMCONST     shift, and go to state 32
    STRINGCONST  shift, and go to state 33
    TRUE         shift, and go to state 34
    FALSE        shift, and go to state 35
    '('          shift, and go to state 36
    NOT          shift, and go to state 37
    '*'          shift, and go to state 38
    '-'          shift, and go to state 39

    simple_expression     go to state 40
    and_expression        go to state 41
    unary_rel_expression  go to state 42
    rel_expression        go to state 43
    sum_expression        go to state 44
    term                  go to state 45
    unary_expression      go to state 46
    unaryop               go to state 47
    factor                go to state 48
    mutable               go to state 49
    immutable             go to state 50
    call                  go to state 51


state 21

   18 fun_declaration: type_specifier ID '(' . params ')' statement

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 21 (params)

    type_specifier  go to state 17
    params          go to state 52
    param_list      go to state 19


state 22

   12 var_decl_initialize: ID '[' . NUMCONST ']'
   14                    | ID '[' . NUMCONST ']' ':' simple_expression

    NUMCONST  shift, and go to state 53


state 23

    9 var_decl_list: var_decl_list ',' . var_decl_initialize

    ID  shift, and go to state 54

    var_decl_initialize  go to state 55


state 24

    6 var_declaration: type_specifier var_decl_list ';' .

    $default  reduce using rule 6 (var_declaration)


state 25

   26 param_id: ID .
   27         | ID . '[' ']'

    '['  shift, and go to state 56

    $default  reduce using rule 26 (param_id)


state 26

   23 param_list: type_specifier param_id_list .
   24 param_id_list: param_id_list . ',' param_id

    ','  shift, and go to state 57

    $default  reduce using rule 23 (param_list)


state 27

   25 param_id_list: param_id .

    $default  reduce using rule 25 (param_id_list)


state 28

   19 fun_declaration: ID '(' params ')' . statement

    ID           shift, and go to state 30
    CHARCONST    shift, and go to state 31
    NUMCONST     shift, and go to state 32
    STRINGCONST  shift, and go to state 33
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    FOREACH      shift, and go to state 60
    TRUE         shift, and go to state 34
    FALSE        shift, and go to state 35
    RETURN       shift, and go to state 61
    BREAK        shift, and go to state 62
    ';'          shift, and go to state 63
    '{'          shift, and go to state 64
    '('          shift, and go to state 36
    NOT          shift, and go to state 37
    '*'          shift, and go to state 38
    '-'          shift, and go to state 39

    statement             go to state 65
    ifmatched             go to state 66
    ifunmatched           go to state 67
    expression_stmt       go to state 68
    compound_stmt         go to state 69
    expression            go to state 70
    simple_expression     go to state 71
    and_expression        go to state 41
    unary_rel_expression  go to state 42
    rel_expression        go to state 43
    sum_expression        go to state 44
    term                  go to state 45
    unary_expression      go to state 46
    unaryop               go to state 47
    factor                go to state 48
    mutable               go to state 72
    immutable             go to state 50
    call                  go to state 51


state 29

   22 param_list: param_list ';' . type_specifier param_id_list

    INT   shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    type_specifier  go to state 73


state 30

   82 mutable: ID .
   83        | ID . '[' expression ']'
   91 call: ID . '(' args ')'

    '('  shift, and go to state 74
    '['  shift, and go to state 75

    $default  reduce using rule 82 (mutable)


state 31

   87 immutable: CHARCONST .

    $default  reduce using rule 87 (immutable)


state 32

   86 immutable: NUMCONST .

    $default  reduce using rule 86 (immutable)


state 33

   88 immutable: STRINGCONST .

    $default  reduce using rule 88 (immutable)


state 34

   89 immutable: TRUE .

    $default  reduce using rule 89 (immutable)


state 35

   90 immutable: FALSE .

    $default  reduce using rule 90 (immutable)


state 36

   84 immutable: '(' . expression ')'

    ID           shift, and go to state 30
    CHARCONST    shift, and go to state 31
    NUMCONST     shift, and go to state 32
    STRINGCONST  shift, and go to state 33
    TRUE         shift, and go to state 34
    FALSE        shift, and go to state 35
    '('          shift, and go to state 36
    NOT          shift, and go to state 37
    '*'          shift, and go to state 38
    '-'          shift, and go to state 39

    expression            go to state 76
    simple_expression     go to state 71
    and_expression        go to state 41
    unary_rel_expression  go to state 42
    rel_expression        go to state 43
    sum_expression        go to state 44
    term                  go to state 45
    unary_expression      go to state 46
    unaryop               go to state 47
    factor                go to state 48
    mutable               go to state 72
    immutable             go to state 50
    call                  go to state 51


state 37

   59 unary_rel_expression: NOT . unary_rel_expression

    ID           shift, and go to state 30
    CHARCONST    shift, and go to state 31
    NUMCONST     shift, and go to state 32
    STRINGCONST  shift, and go to state 33
    TRUE         shift, and go to state 34
    FALSE        shift, and go to state 35
    '('          shift, and go to state 36
    NOT          shift, and go to state 37
    '*'          shift, and go to state 38
    '-'          shift, and go to state 39

    unary_rel_expression  go to state 77
    rel_expression        go to state 43
    sum_expression        go to state 44
    term                  go to state 45
    unary_expression      go to state 46
    unaryop               go to state 47
    factor                go to state 48
    mutable               go to state 49
    immutable             go to state 50
    call                  go to state 51


state 38

   79 unaryop: '*' .

    $default  reduce using rule 79 (unaryop)


state 39

   78 unaryop: '-' .

    $default  reduce using rule 78 (unaryop)


state 40

   13 var_decl_initialize: ID ':' simple_expression .
   55 simple_expression: simple_expression . OR and_expression

    OR  shift, and go to state 78

    $default  reduce using rule 13 (var_decl_initialize)


state 41

   56 simple_expression: and_expression .
   57 and_expression: and_expression . AND unary_rel_expression

    AND  shift, and go to state 79

    $default  reduce using rule 56 (simple_expression)


state 42

   58 and_expression: unary_rel_expression .

    $default  reduce using rule 58 (and_expression)


state 43

   60 unary_rel_expression: rel_expression .

    $default  reduce using rule 60 (unary_rel_expression)


state 44

   61 rel_expression: sum_expression . '<' sum_expression
   62               | sum_expression . '>' sum_expression
   63               | sum_expression . LEQ sum_expression
   64               | sum_expression . GEQ sum_expression
   65               | sum_expression . EQ sum_expression
   66               | sum_expression . NEQ sum_expression
   67               | sum_expression .
   68 sum_expression: sum_expression . '+' term
   69               | sum_expression . '-' term

    EQ   shift, and go to state 80
    NEQ  shift, and go to state 81
    LEQ  shift, and go to state 82
    GEQ  shift, and go to state 83
    '<'  shift, and go to state 84
    '>'  shift, and go to state 85
    '-'  shift, and go to state 86
    '+'  shift, and go to state 87

    $default  reduce using rule 67 (rel_expression)


state 45

   70 sum_expression: term .
   71 term: term . mulop unary_expression

    '*'  shift, and go to state 88
    '%'  shift, and go to state 89
    '/'  shift, and go to state 90

    $default  reduce using rule 70 (sum_expression)

    mulop  go to state 91


state 46

   72 term: unary_expression .

    $default  reduce using rule 72 (term)


state 47

   76 unary_expression: unaryop . unary_expression
